align last common name with arrow correctly

--- a/src/pages/common/components/FeedCard/components/LinkedItemMark/components/LinkedItemTooltipContent/LinkedItemTooltipContent.module.scss
+++ b/src/pages/common/components/FeedCard/components/LinkedItemMark/components/LinkedItemTooltipContent/LinkedItemTooltipContent.module.scss
@@ -13,6 +13,8 @@
 .linkRight {
   flex-shrink: 0;
   max-width: 25rem;
+  display: flex;
+  align-items: center;
 }
 
 .ellipsis {
